--- a/Index.html
+++ b/Index.html
@@ -147,7 +147,7 @@
                 <input class="w100" name="name" type="text" placeholder="Enter Your Name" required>
                 <input class="w100" name="email" type="email" placeholder="Enter Your Email" required>
                 <textarea class="w100" name="Message" placeholder="Enter Your Message" required></textarea>
-                <input type="hidden" name="_captcha" value="false">
+<!--                 <input type="hidden" name="_captcha" value="false"> -->
                 <button class="w100 submit" type="submit">Send Message</button>
             </form>
         </section>
