--- a/Index.html
+++ b/Index.html
@@ -76,7 +76,7 @@
                         <a href="https://github.com/lalitadogra/facebook_homepage_clone"  target="_blank">
                             <button class="git-bt">Source Code</button>
                         </a>
-                        <a href="https://lalita-facebook.netlify.app/"  target="_blank">
+                        <a href="https://facebookclone-lalita.netlify.app/"  target="_blank">
                             <button class="demo-bt">Live Demo</button>
                         </a>
                     </div>
@@ -89,7 +89,7 @@
                         <a href="https://github.com/lalitadogra/newsapplication" target="_blank">
                             <button class="git-bt">Source Code</button>
                         </a>
-                        <a href="https://facebookclone-lalita.netlify.app/"  target="_blank">
+                        <a href="https://lalita-news.netlify.app/"  target="_blank">
                             <button class="demo-bt">Live Demo</button>
                         </a>
                     </div>
