--- a/Index.html
+++ b/Index.html
@@ -76,7 +76,7 @@
                         <a href="https://github.com/lalitadogra/facebook_homepage_clone"  target="_blank">
                             <button class="git-bt">Source Code</button>
                         </a>
-                        <a href="https://facebookclone-lalita.netlify.app/"  target="_blank">
+                        <a href="https://facebook-homepage-clone.onrender.com/"  target="_blank">
                             <button class="demo-bt">Live Demo</button>
                         </a>
                     </div>
